<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/home_screen_background"
    tools:context=".HomePageActivity" >

   
    
     <Button
         android:id="@+id/btn_introduction"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
         android:layout_marginLeft="35dp"
         android:layout_marginRight="35dp"
         android:background="@drawable/black"
         
         android:text="@string/homeIntroduction" />
    
    <Button
        android:id="@+id/btn_typesOfRocks"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/black"
       
        android:text="@string/homeTypesOfRocks" />

    <Button
        android:id="@+id/btn_testYourSkills"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
         android:layout_marginRight="35dp"
        android:layout_marginLeft="35dp"
        android:background="@drawable/black"
        android:text="@string/homeTestYourSkills" />

    <Button
        android:id="@+id/btn_help"
       android:layout_width="match_parent"
        android:layout_height="50dp"
       android:background="@drawable/black"
        android:layout_marginTop="25dp"
         android:layout_marginRight="35dp"
         android:layout_marginLeft="35dp"
        android:text="@string/homeHelp" />

    <Button
        android:id="@+id/btn_quit"
       android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/black"
         android:layout_marginTop="25dp"
          android:layout_marginRight="35dp"
         android:layout_marginLeft="35dp"
        android:text="@string/homeQuit" />

</LinearLayout>